# portfolio-watch

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: portfolio.example.csv
src/portfolio_watch/: __init__.py  __main__.py  bot.py  cli.py  config.py  database.py  market_hours.py  models.py  notifier.py  portfolio.py  pricing.py  watcher.py  web.py
tests/: test_database.py  test_notifier.py  test_portfolio.py  test_yfinance_provider.py
